--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "@angular/compiler": "^20.1.0",
     "@angular/core": "^20.1.0",
     "@angular/forms": "^20.1.0",
-    "@angular/platform-browser": "^20.1.0",
+    "@angular/platform-browser": "^20.1.3",
     "@angular/router": "^20.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "angular-svg-icon": "^19.1.1",
     "rxjs": "~7.8.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11",
@@ -39,6 +40,7 @@
     "@angular/build": "^20.1.3",
     "@angular/cli": "^20.1.3",
     "@angular/compiler-cli": "^20.1.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
